--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <hr>
 
           <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Skills</b></p>
+          <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="2c97e663-c5c1-4aad-8ec6-be621751f250" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
           <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="526a172e-2c35-4f29-800e-ecb5fdfb8cb1" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
+          <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="e5d995be-7301-47cd-ae6b-7f0d004a0ab2" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
+
           <p>Adobe Photoshop</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:90%">90%</div>
