--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
 <footer class="w3-container w3-teal w3-center w3-margin-top">
   <p>Find me on social media.</p>
-  <a href="https://github.com/ben-newman10" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
-  <a href="https://www.linkedin.com/in/ben-newman-1b4808ba" target="_blank"></a><i class="fa fa-linkedin w3-hover-opacity"></i></a>
+  <a href="https://github.com/ben-newman10" target="_blank"><i class="fa fa-2x fa-github w3-hover-opacity"></i></a>
+  <a href="https://www.linkedin.com/in/ben-newman-1b4808ba" target="_blank"><i class="fa fa-2x fa-linkedin w3-hover-opacity"></i></a>
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
 </footer>
 
