added details for BT

--- a/index.html
+++ b/index.html
@@ -93,7 +93,15 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Software Engineer / British Telecom (BT)</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Sept 2013 - Jul 2019</h6>
-          <p>Consectetur adipisicing elit. Praesentium magnam consectetur vel in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure, iste.</p>
+          <ul>
+            <li>DevOps (Docker, Kubernetes, Puppet)</li>
+            <li>Database Management (MongoDB, SQL)</li>
+            <li>>Web Development (NodeJS, VueJS, AngularJS)</li>
+            <li>Python</li>
+            <li>C++ Software Development</li>
+            <li>Agile Methodologies</li>
+            <li>Personal Mentor</li>
+          </ul>
           <hr>
         </div>
         <div class="w3-container">
