Added aston uni experience

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <ul>
             <li>DevOps (Docker, Kubernetes, Puppet)</li>
             <li>Database Management (MongoDB, SQL)</li>
-            <li>>Web Development (NodeJS, VueJS, AngularJS)</li>
+            <li>Web Development (NodeJS, VueJS, AngularJS)</li>
             <li>Python</li>
             <li>C++ Software Development</li>
             <li>Agile Methodologies</li>
@@ -116,7 +116,25 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Aston University</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2010 - 2013</h6>
-          <p>Bachelors Degree in Computer Science</p>
+          <p>Bachelors Degree in Computer Science
+          Grade: Second Class HonoursGrade: Second Class Honours
+          Activities and societies: Founding member of the Computer Science Society
+          Social Secretary and Treasurer for the Computer Science SocietyActivities and societies: Founding member of the Computer Science Society Social Secretary and Treasurer for the Computer Science Society.</p>
+        
+        <ul>
+          <li>Software Engineering</li>
+          <li>Java Program Development</li>
+          <li>Internet Applications</li>
+          <li>Software Project Management with Agile Techniques and SCRUM</li>
+          <li>Data Mining</li>
+          <li>Android Mobile Application Development</li>
+          <li>Interaction Design</li>
+          <li>Programming Language Concepts</li>
+          <li>Game Development with 3D unity</li>
+          <li>Enterprise Application Technology</li>
+        </ul>
+
+        <p>Final year project was to develop an online system that the School of Engineering could use to manage their final year projects. This involved all management aspects of final year projects ranging from advertising potential projects, allocating those projects to students and even delivering project grades.</p>
           <hr>
         </div>
         <div class="w3-container">
