updated tp add halesowen college experience

--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Aston University</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2010 - 2013</h6>
-          <p>Bachelors Degree in Computer Science
-          Grade: Second Class HonoursGrade: Second Class Honours
+          <p>Bachelors Degree in Computer Science</p>
+          <p>Grade: Second Class Honours
           Activities and societies: Founding member of the Computer Science Society
           Social Secretary and Treasurer for the Computer Science SocietyActivities and societies: Founding member of the Computer Science Society Social Secretary and Treasurer for the Computer Science Society.</p>
         
@@ -141,6 +141,16 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <h5 class="w3-opacity"><b>Halesowen Colleage Business School</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2008 - 2010</h6>
           <p>BTEC National Diploma in IT.</p>
+          <p>Grade: Distinction Distinction Distinction</p>
+          <ul>
+            <li>Software Design and Development</li>
+            <li>Advanced Database Skills</li>
+            <li>Advanced Spreadsheet Skills</li>
+            <li>Website Production and Management</li>
+            <li>IT Technical Support</li>
+            <li>Computer Networks</li>
+            <li>Event Driven Programming</li>
+          </ul>
           <hr>
         </div>
       </div>
