--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <hr>
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Halesowen Colleage Business School</b></h5>
+          <h5 class="w3-opacity"><b>Halesowen Colleage</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2008 - 2010</h6>
           <p>BTEC National Diploma in IT.</p>
           <p>Grade: Distinction Distinction Distinction</p>
