--- a/index.html
+++ b/index.html
@@ -118,8 +118,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2010 - 2013</h6>
           <p><b>Bachelors Degree in Computer Science</b></p>
           <p><i>Grade: Second Class Honours</i></p>
-          <p>Activities and societies: Founding member of the Computer Science Society
-          Social Secretary and Treasurer for the Computer Science SocietyActivities and societies: Founding member of the Computer Science Society Social Secretary and Treasurer for the Computer Science Society.</p>
+          <p>Activities and societies: Founding member of the Computer Science Society. Social Secretary and Treasurer.</p>
         
         <ul>
           <li>Software Engineering</li>
