--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <br>
 
             <p class="w3-large w3-text-theme"><b><i
-                  class="fa fa-globe fa-fw w3-margin-right w3-text-teal"></i>Technologies</b></p>
+                  class="fa fa-computer-mouse fa-fw w3-margin-right w3-text-teal"></i>Technologies</b></p>
             <p>Amazon Web Services</p>
             <div class="w3-light-grey w3-round-xlarge">
               <div class="w3-round-xlarge w3-teal" style="height:24px;width:100%"></div>
@@ -109,7 +109,7 @@
 
         <div class="w3-container w3-card w3-white w3-margin-bottom">
           <h2 class="w3-text-grey w3-padding-16"><i
-              class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
+              class="fa fa-diploma fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>DevOps Engineer / IBM</b></h5>
             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jul 2019 - <span
@@ -143,7 +143,7 @@
 
         <div class="w3-container w3-card w3-white">
           <h2 class="w3-text-grey w3-padding-16"><i
-              class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>
+              class="fa fa-graduation-cap fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Aston University</b></h5>
             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2010 - 2013</h6>
