--- a/index.html
+++ b/index.html
@@ -122,13 +122,13 @@
             <h5 class="w3-opacity"><b>Software Engineer / British Telecom (BT)</b></h5>
             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Sept 2013 - Jul 2019</h6>
             <ul>
-              <li>DevOps (Docker, Kubernetes, Puppet)</li>
-              <li>Database Management (MongoDB, SQL)</li>
-              <li>Web Development (NodeJS, VueJS, AngularJS)</li>
-              <li>Python</li>
-              <li>C++ Software Development</li>
-              <li>Agile Methodologies</li>
-              <li>Personal Mentor</li>
+              <li>DevOps (Docker, Kubernetes, Puppet).</li>
+              <li>Database Management (MongoDB, SQL).</li>
+              <li>Web Development (NodeJS, VueJS, AngularJS).</li>
+              <li>Python.</li>
+              <li>C++ Software Development.</li>
+              <li>Agile Methodologies.</li>
+              <li>Personal Mentor.</li>
             </ul>
             <hr>
           </div>
@@ -143,7 +143,7 @@
 
         <div class="w3-container w3-card w3-white">
           <h2 class="w3-text-grey w3-padding-16"><i
-              class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>
+              class="fa-solid fa-graduation-cap fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Aston University</b></h5>
             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2010 - 2013</h6>
