--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>Ask for contact number.</p>
             <hr>
 
-            <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Certifications</b>
+            <p class="w3-large"><b><i class="fa-solid fa-award fa-fw w3-margin-right w3-text-teal"></i>Certifications</b>
             </p>
             <div data-iframe-width="150" data-iframe-height="270"
               data-share-badge-id="2c97e663-c5c1-4aad-8ec6-be621751f250" data-share-badge-host="https://www.credly.com">
@@ -68,7 +68,7 @@
             <br>
 
             <p class="w3-large w3-text-theme"><b><i
-                  class="fa fa-globe fa-fw w3-margin-right w3-text-teal"></i>Technologies</b></p>
+                  class="fa-solid fa-computer-mouse fa-fw w3-margin-right w3-text-teal"></i>Technologies</b></p>
             <p>Amazon Web Services</p>
             <div class="w3-light-grey w3-round-xlarge">
               <div class="w3-round-xlarge w3-teal" style="height:24px;width:100%"></div>
