--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
             <p class="w3-large w3-text-theme"><b><i
                   class="fa-solid fa-computer-mouse fa-fw w3-margin-right w3-text-teal"></i>Technologies</b></p>
-            <p>Amazon Web Services</p>
+            <p>Amazon Web Services (AWS)</p>
             <div class="w3-light-grey w3-round-xlarge">
               <div class="w3-round-xlarge w3-teal" style="height:24px;width:100%"></div>
             </div>
