--- a/index.html
+++ b/index.html
@@ -200,9 +200,9 @@
 
   <footer class="w3-container w3-teal w3-center w3-margin-top">
     <p>Find me on social media.</p>
-    <a href="https://github.com/ben-newman10" target="_blank"><i class="fa fa-2x fa-github w3-hover-opacity"></i></a>
+    <a href="https://github.com/ben-newman10" target="_blank"><i class="fa-brands fa-2x fa-github w3-hover-opacity"></i></a>
     <a href="https://www.linkedin.com/in/ben-humphreys-newman" target="_blank"><i
-        class="fa fa-2x fa-linkedin w3-hover-opacity"></i></a>
+        class="fa-brands fa-2x fa-linkedin w3-hover-opacity"></i></a>
   </footer>
 
 </body>
