updated calendar days

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
               class="fa-regular fa-briefcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>DevOps Engineer / IBM</b></h5>
-            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jul 2019 - <span
+            <h6 class="w3-text-teal"><i class="fa-regular fa-calendar-days fa-fw w3-margin-right"></i>Jul 2019 - <span
                 class="w3-tag w3-teal w3-round">Current</span></h6>
             <p>Lorem ipsum dolor sit amet. Praesentium magnam consectetur vel in deserunt aspernatur est reprehenderit
               sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure, iste.</p>
@@ -120,7 +120,7 @@
           </div>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Software Engineer / British Telecom (BT)</b></h5>
-            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Sept 2013 - Jul 2019</h6>
+            <h6 class="w3-text-teal"><i class="fa-regular fa-calendar-days fa-fw w3-margin-right"></i>Sept 2013 - Jul 2019</h6>
             <ul>
               <li>DevOps (Docker, Kubernetes, Puppet).</li>
               <li>Database Management (MongoDB, SQL).</li>
@@ -134,7 +134,7 @@
           </div>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Software Developer / Aston Active Software Engineering</b></h5>
-            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Nov 2012 - Mar 2013</h6>
+            <h6 class="w3-text-teal"><i class="fa-regular fa-calendar-days fa-fw w3-margin-right"></i>Nov 2012 - Mar 2013</h6>
             <p>Software developer within the student company, delivering products to real customers. Responsible for
               designing and developing systems using HTML, Javascript, CSS, PHP and MySQL on a number of different
               projects for clients using Agile Scrum methodology within a variety of different teams. </p><br>
@@ -146,7 +146,7 @@
             <i class="fa fa-graduation-cap fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Aston University</b></h5>
-            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2010 - 2013</h6>
+            <h6 class="w3-text-teal"><i class="fa-regular fa-calendar-days fa-fw w3-margin-right"></i>2010 - 2013</h6>
             <p><b>Bachelors Degree in Computer Science</b></p>
             <p><i>Grade: Second Class Honours</i></p>
             <p>Activities and societies: Founding member of the Computer Science Society. Social Secretary & Treasurer.
@@ -173,7 +173,7 @@
           </div>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Halesowen Colleage</b></h5>
-            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2008 - 2010</h6>
+            <h6 class="w3-text-teal"><i class="fa-regular fa-calendar-days fa-fw w3-margin-right"></i>2008 - 2010</h6>
             <p><b>BTEC National Diploma in IT.</b></p>
             <p><i>Grade: Distinction Distinction Distinction</i></p>
             <ul>
