Restored old work experience layout

--- a/index.html
+++ b/index.html
@@ -111,18 +111,16 @@
           <h2 class="w3-text-grey w3-padding-16"><i
               class="fa-regular fa-briefcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
           <div class="w3-container">
-            <h5 class="w3-opacity"><b>IBM</b></h5>
+            <h5 class="w3-opacity"><b>DevOps Engineer / IBM</b></h5>
             <h6 class="w3-text-teal"><i class="fa-regular fa-calendar-days fa-fw w3-margin-right"></i>Jul 2019 - <span
                 class="w3-tag w3-teal w3-round">Current</span></h6>
-            <p><b>Cloud Engineer | DevOps Engineer</b></p>
             <p>Lorem ipsum dolor sit amet. Praesentium magnam consectetur vel in deserunt aspernatur est reprehenderit
               sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure, iste.</p>
             <hr>
           </div>
           <div class="w3-container">
-            <h5 class="w3-opacity"><b>British Telecom (BT)</b></h5>
+            <h5 class="w3-opacity"><b>Software Engineer / British Telecom (BT)</b></h5>
             <h6 class="w3-text-teal"><i class="fa-regular fa-calendar-days fa-fw w3-margin-right"></i>Sept 2013 - Jul 2019</h6>
-            <p><b>Software Engineer</b></p>
             <ul>
               <li>DevOps (Docker, Kubernetes, Puppet).</li>
               <li>Database Management (MongoDB, SQL).</li>
