--- a/index.html
+++ b/index.html
@@ -114,13 +114,21 @@
             <h5 class="w3-opacity"><b>DevOps Engineer / IBM</b></h5>
             <h6 class="w3-text-teal"><i class="fa-regular fa-calendar-days fa-fw w3-margin-right"></i>Jul 2019 - <span
                 class="w3-tag w3-teal w3-round">Current</span></h6>
-            <p>Lorem ipsum dolor sit amet. Praesentium magnam consectetur vel in deserunt aspernatur est reprehenderit
-              sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure, iste.</p>
+            <p>DevOps Engineer working architecting, developing and supporting cloud native applications in Amazon Web Services (AWS). Started building cloud native serverless applications and then moved on to archiecting in the cloud using CloudFormation and Terraform. Other skills include:</p>
+            <ul>
+              <li>AWS technologies - Lambda, EC2, CloudFormation, CloudFront, SQS, SNS & many more.</li>
+              <li>Python development.</li>
+              <li>Java Springboot.</li>
+              <li>Terraform.</li>
+              <li>Docker & Kubernetes.</li>
+              <li>OpenShift.</li>
+            </ul>
             <hr>
           </div>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Software Engineer / British Telecom (BT)</b></h5>
             <h6 class="w3-text-teal"><i class="fa-regular fa-calendar-days fa-fw w3-margin-right"></i>Sept 2013 - Jul 2019</h6>
+            <p>Consultant Software Engineer working on bespoke C++ applications and Python testing frameworks. In addition to this, learning and applying web technologies such as AngularJS. Summary skills:</p>
             <ul>
               <li>DevOps (Docker, Kubernetes, Puppet).</li>
               <li>Database Management (MongoDB, SQL).</li>
@@ -172,7 +180,7 @@
             <hr>
           </div>
           <div class="w3-container">
-            <h5 class="w3-opacity"><b>Halesowen Colleage</b></h5>
+            <h5 class="w3-opacity"><b>Halesowen College</b></h5>
             <h6 class="w3-text-teal"><i class="fa-regular fa-calendar-days fa-fw w3-margin-right"></i>2008 - 2010</h6>
             <p><b>BTEC National Diploma in IT.</b></p>
             <p><i>Grade: Distinction Distinction Distinction</i></p>
