--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <h5 class="w3-opacity"><b>DevOps Engineer / IBM</b></h5>
             <h6 class="w3-text-teal"><i class="fa-regular fa-calendar-days fa-fw w3-margin-right"></i>Jul 2019 - <span
                 class="w3-tag w3-teal w3-round">Current</span></h6>
-            <p>DevOps Engineer working architecting, developing and supporting cloud native applications in Amazon Web Services (AWS). Started building cloud native serverless applications and then moved on to archiecting in the cloud using CloudFormation and Terraform. Other skills include:</p>
+            <p>DevOps Engineer architecting, developing and supporting cloud native applications in Amazon Web Services (AWS). Started building cloud native serverless applications and then moved on to archiecting in the cloud using CloudFormation and Terraform. Other skills include:</p>
             <ul>
               <li>AWS technologies - Lambda, EC2, CloudFormation, CloudFront, SQS, SNS & many more.</li>
               <li>Python development.</li>
