Updated CV with BT experience

--- a/index.html
+++ b/index.html
@@ -111,12 +111,13 @@
           <h2 class="w3-text-grey w3-padding-16"><i
               class="fa-solid fa-briefcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
           <div class="w3-container">
-            <h5 class="w3-opacity"><b>DevOps Engineer / IBM</b></h5>
+            <h5 class="w3-opacity"><b>Lead DevOps Engineer / IBM</b></h5>
             <h6 class="w3-text-teal"><i class="fa-regular fa-calendar-days fa-fw w3-margin-right"></i>Jul 2019 - <span
                 class="w3-tag w3-teal w3-round">Current</span></h6>
-            <p>DevOps Engineer architecting, developing and supporting cloud native applications in Amazon Web Services (AWS). Started building cloud native serverless applications and then moved on to archiecting in the cloud using CloudFormation and Terraform. Other skills include:</p>
+            <p>Lead DevOps Engineer architecting, developing and supporting cloud native applications in Amazon Web Services (AWS). Started building cloud native serverless applications and then moved on to archiecting in the cloud using CloudFormation and Terraform. </p>
+            <p>Summary skills:</p>
             <ul>
-              <li>AWS technologies - Lambda, EC2, CloudFormation, CloudFront, SQS, SNS & many more.</li>
+              <li>AWS technologies - Lambda, EC2, CloudFormation, CloudFront, SQS, CodePipeline, SNS & many more.</li>
               <li>Python development.</li>
               <li>Java Springboot.</li>
               <li>Terraform.</li>
@@ -128,7 +129,8 @@
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Software Engineer / British Telecom (BT)</b></h5>
             <h6 class="w3-text-teal"><i class="fa-regular fa-calendar-days fa-fw w3-margin-right"></i>Sept 2013 - Jul 2019</h6>
-            <p>Consultant Software Engineer working on bespoke C++ applications and Python testing frameworks. In addition to this, learning and applying web technologies such as AngularJS. Summary skills:</p>
+            <p>Refreshing and dockerizing a legacy system that deals with services deployed all over the world. This involved writing new services in Python and setting them up as microservices. Setup communication between all services using a QPID broker to enable faster and more efficient communications between services. All microservices deployed as docker containers and managed with Rancher.</p>
+            <p>Summary skills:</p>
             <ul>
               <li>DevOps (Docker, Kubernetes, Puppet).</li>
               <li>Database Management (MongoDB, SQL).</li>
