Added technical leadership to IBM

--- a/index.html
+++ b/index.html
@@ -117,7 +117,8 @@
             <p>Lead DevOps Engineer architecting, developing and supporting cloud native applications in Amazon Web Services (AWS). Started building cloud native serverless applications and then moved on to archiecting in the cloud using CloudFormation and Terraform. </p>
             <p>Summary skills:</p>
             <ul>
-              <li>AWS technologies - Lambda, EC2, CloudFormation, CloudFront, SQS, CodePipeline, SNS & many more.</li>
+              <li>Technical Leader - setting technical direction and insight.</li>
+              <li>AWS - Lambda, EC2, CloudFormation, CloudFront, SQS, CodePipeline, SNS & many more.</li>
               <li>Python development.</li>
               <li>Java Springboot.</li>
               <li>Terraform.</li>
