--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
           </div>
           <div class="w3-container">
-            <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>DevOps Engineer</p>
+            <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Lead DevOps Engineer</p>
             <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Gloucestershire, UK</p>
             <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>ben@humphreysnewman.co.uk</p>
             <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>Ask for contact number.</p>
