Added DevOps pro badge and remove old one

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+    integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <style>
     html,
     body,
@@ -47,18 +49,19 @@
             <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>Ask for contact number.</p>
             <hr>
 
-            <p class="w3-large"><b><i class="fa-solid fa-award fa-fw w3-margin-right w3-text-teal"></i>Certifications</b>
+            <p class="w3-large"><b><i
+                  class="fa-solid fa-award fa-fw w3-margin-right w3-text-teal"></i>Certifications</b>
             </p>
+            <div data-iframe-width="150" data-iframe-height="270"
+              data-share-badge-id="47c4ebe8-278b-4a7b-8d5b-156c5dc021f1" data-share-badge-host="https://www.credly.com">
+            </div>
+            <script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
             <div data-iframe-width="150" data-iframe-height="270"
               data-share-badge-id="2c97e663-c5c1-4aad-8ec6-be621751f250" data-share-badge-host="https://www.credly.com">
             </div>
             <script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
             <div data-iframe-width="150" data-iframe-height="270"
               data-share-badge-id="526a172e-2c35-4f29-800e-ecb5fdfb8cb1" data-share-badge-host="https://www.credly.com">
-            </div>
-            <script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
-            <div data-iframe-width="150" data-iframe-height="270"
-              data-share-badge-id="e5d995be-7301-47cd-ae6b-7f0d004a0ab2" data-share-badge-host="https://www.credly.com">
             </div>
             <script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
             <div data-iframe-width="150" data-iframe-height="270"
@@ -114,7 +117,9 @@
             <h5 class="w3-opacity"><b>Lead DevOps Engineer / IBM</b></h5>
             <h6 class="w3-text-teal"><i class="fa-regular fa-calendar-days fa-fw w3-margin-right"></i>Jul 2019 - <span
                 class="w3-tag w3-teal w3-round">Current</span></h6>
-            <p>Lead DevOps Engineer architecting, developing and supporting cloud native applications in Amazon Web Services (AWS). Started building cloud native serverless applications and then moved on to archiecting in the cloud using CloudFormation and Terraform. </p>
+            <p>Lead DevOps Engineer architecting, developing and supporting cloud native applications in Amazon Web
+              Services (AWS). Started building cloud native serverless applications and then moved on to archiecting in
+              the cloud using CloudFormation and Terraform. </p>
             <p>Summary skills:</p>
             <ul>
               <li>Technical Leader - setting technical direction and insight.</li>
@@ -129,8 +134,12 @@
           </div>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Software Engineer / British Telecom (BT)</b></h5>
-            <h6 class="w3-text-teal"><i class="fa-regular fa-calendar-days fa-fw w3-margin-right"></i>Sept 2013 - Jul 2019</h6>
-            <p>Refreshing and dockerizing a legacy system that deals with services deployed all over the world. This involved writing new services in Python and setting them up as microservices. Setup communication between all services using a QPID broker to enable faster and more efficient communications between services. All microservices deployed as docker containers and managed with Rancher.</p>
+            <h6 class="w3-text-teal"><i class="fa-regular fa-calendar-days fa-fw w3-margin-right"></i>Sept 2013 - Jul
+              2019</h6>
+            <p>Refreshing and dockerizing a legacy system that deals with services deployed all over the world. This
+              involved writing new services in Python and setting them up as microservices. Setup communication between
+              all services using a QPID broker to enable faster and more efficient communications between services. All
+              microservices deployed as docker containers and managed with Rancher.</p>
             <p>Summary skills:</p>
             <ul>
               <li>DevOps (Docker, Kubernetes, Puppet).</li>
@@ -145,7 +154,8 @@
           </div>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Software Developer / Aston Active Software Engineering</b></h5>
-            <h6 class="w3-text-teal"><i class="fa-regular fa-calendar-days fa-fw w3-margin-right"></i>Nov 2012 - Mar 2013</h6>
+            <h6 class="w3-text-teal"><i class="fa-regular fa-calendar-days fa-fw w3-margin-right"></i>Nov 2012 - Mar
+              2013</h6>
             <p>Software developer within the student company, delivering products to real customers. Responsible for
               designing and developing systems using HTML, Javascript, CSS, PHP and MySQL on a number of different
               projects for clients using Agile Scrum methodology within a variety of different teams. </p><br>
@@ -154,7 +164,8 @@
 
         <div class="w3-container w3-card w3-white">
           <h2 class="w3-text-grey w3-padding-16">
-            <i class="fa fa-graduation-cap fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>
+            <i class="fa fa-graduation-cap fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education
+          </h2>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Aston University</b></h5>
             <h6 class="w3-text-teal"><i class="fa-regular fa-calendar-days fa-fw w3-margin-right"></i>2010 - 2013</h6>
@@ -211,7 +222,8 @@
 
   <footer class="w3-container w3-teal w3-center w3-margin-top">
     <p>Find me on social media.</p>
-    <a href="https://github.com/ben-newman10" target="_blank"><i class="fa-brands fa-2x fa-github w3-hover-opacity"></i></a>
+    <a href="https://github.com/ben-newman10" target="_blank"><i
+        class="fa-brands fa-2x fa-github w3-hover-opacity"></i></a>
     <a href="https://www.linkedin.com/in/ben-humphreys-newman" target="_blank"><i
         class="fa-brands fa-2x fa-linkedin w3-hover-opacity"></i></a>
   </footer>
