updated IBM DevOps role

--- a/index.html
+++ b/index.html
@@ -88,6 +88,10 @@
             <div class="w3-light-grey w3-round-xlarge">
               <div class="w3-round-xlarge w3-teal" style="height:24px;width:80%"></div>
             </div>
+            <p>Ansible</p>
+            <div class="w3-light-grey w3-round-xlarge">
+              <div class="w3-round-xlarge w3-teal" style="height:24px;width:80%"></div>
+            </div>
             <p>Python</p>
             <div class="w3-light-grey w3-round-xlarge">
               <div class="w3-round-xlarge w3-teal" style="height:24px;width:70%"></div>
@@ -117,19 +121,37 @@
             <h5 class="w3-opacity"><b>Lead DevOps Engineer / IBM</b></h5>
             <h6 class="w3-text-teal"><i class="fa-regular fa-calendar-days fa-fw w3-margin-right"></i>Jul 2019 - <span
                 class="w3-tag w3-teal w3-round">Current</span></h6>
-            <p>Lead DevOps Engineer architecting, developing and supporting cloud native applications in Amazon Web
-              Services (AWS). Started building cloud native serverless applications and then moved on to archiecting in
-              the cloud using CloudFormation and Terraform. </p>
-            <p>Summary skills:</p>
+
+            <p>Experienced Lead DevOps Engineer with over 10 years of experience in designing, developing and supporting cloud-native applications in Amazon Web Services (AWS). Proven track record of delivering high-quality, scalable, and secure solutions that meet business needs. Strong technical leadership skills, with the ability to set direction and provide insight to cross-functional teams. </p>
+            <p>Professional Summary:</p>
             <ul>
-              <li>Technical Leader - setting technical direction and insight.</li>
-              <li>AWS - Lambda, EC2, CloudFormation, CloudFront, SQS, CodePipeline, SNS & many more.</li>
-              <li>Python development.</li>
-              <li>Java Springboot.</li>
-              <li>Terraform.</li>
-              <li>Docker & Kubernetes.</li>
-              <li>OpenShift.</li>
+              <li>
+                Technical Leadership: Led teams in designing, developing, and implementing cloud-native applications, providing technical direction and guidance to ensure successful project outcomes.
+              </li>
+              <li>
+                AWS Expertise: Extensive experience in designing and building efficient cloud infrastructure using AWS services such as Lambda, EC2, CloudFormation, CloudFront, SQS, CodePipeline, SNS, and many more.
+              </li>
+              <li>
+                Software Development: Skilled in developing robust and scalable Python applications, with experience in Java Springboot and Terraform.
+              </li>
+              <li>
+                Containerisation and Orchestration: Proficient in Docker and Kubernetes, with years of experience using OpenShift.
+              </li>
             </ul>
+
+            <p>Key Skills:</p>
+            <ul>
+            <li>AWS cloud infrastructure design and management.</li>
+              <li> Python development.</li>
+              <li> Java Springboot.</li>
+              <li> Cloud-native application development and deployment.</li>
+              <li> Terraform.</li>
+              <li> Docker and Kubernetes containerization and orchestration.</li>
+              <li> OpenShift.</li>
+              <li> Technical leadership and direction.</li>
+              <li> Cross-functional team collaboration.</li>
+              <li> Agile software development methodologies.</li>
+          </ul>
             <hr>
           </div>
           <div class="w3-container">
