Updated BT section to match IBM section style

--- a/index.html
+++ b/index.html
@@ -122,26 +122,33 @@
             <h6 class="w3-text-teal"><i class="fa-regular fa-calendar-days fa-fw w3-margin-right"></i>Jul 2019 - <span
                 class="w3-tag w3-teal w3-round">Current</span></h6>
 
-            <p>Experienced Lead DevOps Engineer with over 10 years of experience in designing, developing and supporting cloud-native applications in Amazon Web Services (AWS). Proven track record of delivering high-quality, scalable, and secure solutions that meet business needs. Strong technical leadership skills, with the ability to set direction and provide insight to cross-functional teams. </p>
+            <p>Experienced Lead DevOps Engineer with over 10 years of experience in designing, developing and supporting
+              cloud-native applications in Amazon Web Services (AWS). Proven track record of delivering high-quality,
+              scalable, and secure solutions that meet business needs. Strong technical leadership skills, with the
+              ability to set direction and provide insight to cross-functional teams. </p>
             <p>Professional Summary:</p>
             <ul>
               <li>
-                Technical Leadership: Led teams in designing, developing, and implementing cloud-native applications, providing technical direction and guidance to ensure successful project outcomes.
+                Technical Leadership: Led teams in designing, developing, and implementing cloud-native applications,
+                providing technical direction and guidance to ensure successful project outcomes.
               </li>
               <li>
-                AWS Expertise: Extensive experience in designing and building efficient cloud infrastructure using AWS services such as Lambda, EC2, CloudFormation, CloudFront, SQS, CodePipeline, SNS, and many more.
+                AWS Expertise: Extensive experience in designing and building efficient cloud infrastructure using AWS
+                services such as Lambda, EC2, CloudFormation, CloudFront, SQS, CodePipeline, SNS, and many more.
               </li>
               <li>
-                Software Development: Skilled in developing robust and scalable Python applications, with experience in Java Springboot and Terraform.
+                Software Development: Skilled in developing robust and scalable Python applications, with experience in
+                Java Springboot and Terraform.
               </li>
               <li>
-                Containerisation and Orchestration: Proficient in Docker and Kubernetes, with years of experience using OpenShift.
+                Containerisation and Orchestration: Proficient in Docker and Kubernetes, with years of experience using
+                OpenShift.
               </li>
             </ul>
 
             <p>Key Skills:</p>
             <ul>
-            <li>AWS cloud infrastructure design and management.</li>
+              <li>AWS cloud infrastructure design and management.</li>
               <li> Python development.</li>
               <li> Java Springboot.</li>
               <li> Cloud-native application development and deployment.</li>
@@ -151,7 +158,7 @@
               <li> Technical leadership and direction.</li>
               <li> Cross-functional team collaboration.</li>
               <li> Agile software development methodologies.</li>
-          </ul>
+            </ul>
             <hr>
           </div>
           <div class="w3-container">
@@ -162,7 +169,7 @@
               involved writing new services in Python and setting them up as microservices. Setup communication between
               all services using a QPID broker to enable faster and more efficient communications between services. All
               microservices deployed as docker containers and managed with Rancher.</p>
-            <p>Summary skills:</p>
+            <p>Professional Summary:</p>
             <ul>
               <li>DevOps (Docker, Kubernetes, Puppet).</li>
               <li>Database Management (MongoDB, SQL).</li>
