Removed lead and using DevOps Engineer

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           <h2 class="w3-text-grey w3-padding-16"><i
               class="fa-solid fa-briefcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
           <div class="w3-container">
-            <h5 class="w3-opacity"><b>Lead DevOps Engineer / IBM</b></h5>
+            <h5 class="w3-opacity"><b>Senior DevOps Engineer / IBM</b></h5>
             <h6 class="w3-text-teal"><i class="fa-regular fa-calendar-days fa-fw w3-margin-right"></i>Jul 2019 - <span
                 class="w3-tag w3-teal w3-round">Current</span></h6>
 
