Removed senior and lead titles

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
           </div>
           <div class="w3-container">
-            <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Lead DevOps Engineer</p>
+            <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>DevOps Engineer</p>
             <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Gloucestershire, UK</p>
             <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>ben@humphreysnewman.co.uk</p>
             <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>Ask for contact number.</p>
@@ -118,11 +118,11 @@
           <h2 class="w3-text-grey w3-padding-16"><i
               class="fa-solid fa-briefcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
           <div class="w3-container">
-            <h5 class="w3-opacity"><b>Senior DevOps Engineer / IBM</b></h5>
+            <h5 class="w3-opacity"><b>DevOps Engineer / IBM</b></h5>
             <h6 class="w3-text-teal"><i class="fa-regular fa-calendar-days fa-fw w3-margin-right"></i>Jul 2019 - <span
                 class="w3-tag w3-teal w3-round">Current</span></h6>
 
-            <p>Experienced Lead DevOps Engineer with over 10 years of experience in designing, developing and supporting
+            <p>Experienced DevOps Engineer with over 10 years of experience in designing, developing and supporting
               cloud-native applications in Amazon Web Services (AWS). Proven track record of delivering high-quality,
               scalable, and secure solutions that meet business needs. Strong technical leadership skills, with the
               ability to set direction and provide insight to cross-functional teams. </p>
