used @ instead of /

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           <h2 class="w3-text-grey w3-padding-16"><i
               class="fa-solid fa-briefcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
           <div class="w3-container">
-            <h5 class="w3-opacity"><b>DevOps Engineer / IBM</b></h5>
+            <h5 class="w3-opacity"><b>DevOps Engineer @ IBM</b></h5>
             <h6 class="w3-text-teal"><i class="fa-regular fa-calendar-days fa-fw w3-margin-right"></i>Jul 2019 - <span
                 class="w3-tag w3-teal w3-round">Current</span></h6>
 
@@ -162,7 +162,7 @@
             <hr>
           </div>
           <div class="w3-container">
-            <h5 class="w3-opacity"><b>Software Engineer / British Telecom (BT)</b></h5>
+            <h5 class="w3-opacity"><b>Software Engineer @ British Telecom (BT)</b></h5>
             <h6 class="w3-text-teal"><i class="fa-regular fa-calendar-days fa-fw w3-margin-right"></i>Sept 2013 - Jul
               2019</h6>
             <p>Refreshing and dockerizing a legacy system that deals with services deployed all over the world. This
@@ -182,7 +182,7 @@
             <hr>
           </div>
           <div class="w3-container">
-            <h5 class="w3-opacity"><b>Software Developer / Aston Active Software Engineering</b></h5>
+            <h5 class="w3-opacity"><b>Software Developer @ Aston Active Software Engineering</b></h5>
             <h6 class="w3-text-teal"><i class="fa-regular fa-calendar-days fa-fw w3-margin-right"></i>Nov 2012 - Mar
               2013</h6>
             <p>Software developer within the student company, delivering products to real customers. Responsible for
