updated header to key skills

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
               involved writing new services in Python and setting them up as microservices. Setup communication between
               all services using a QPID broker to enable faster and more efficient communications between services. All
               microservices deployed as docker containers and managed with Rancher.</p>
-            <p>Professional Summary:</p>
+            <p>Key Skills:</p>
             <ul>
               <li>DevOps (Docker, Kubernetes, Puppet).</li>
               <li>Database Management (MongoDB, SQL).</li>
