--- a/index.html
+++ b/index.html
@@ -102,6 +102,10 @@
             </div>
             <p>Terraform</p>
             <div class="w3-light-grey w3-round-xlarge">
+              <div class="w3-round-xlarge w3-teal" style="height:24px;width:60%"></div>
+            </div>
+            <p>AWS Cloud Development Kit</p>
+            <div class="w3-light-grey w3-round-xlarge">
               <div class="w3-round-xlarge w3-teal" style="height:24px;width:50%"></div>
             </div>
             <br>
@@ -129,19 +133,19 @@
             <p>Professional Summary:</p>
             <ul>
               <li>
-                Technical Leadership: Led teams in designing, developing, and implementing cloud-native applications,
+                <b>Technical Leadership</b>: Led teams in designing, developing, and implementing cloud-native applications,
                 providing technical direction and guidance to ensure successful project outcomes.
               </li>
               <li>
-                AWS Expertise: Extensive experience in designing and building efficient cloud infrastructure using AWS
+                <b>AWS Expertise</b>: Extensive experience in designing and building efficient cloud infrastructure using AWS
                 services such as Lambda, EC2, CloudFormation, CloudFront, SQS, CodePipeline, SNS, and many more.
               </li>
               <li>
-                Software Development: Skilled in developing robust and scalable Python applications, with experience in
+                <b>Software Development</b>: Skilled in developing robust and scalable Python applications, with experience in
                 Java Springboot and Terraform.
               </li>
               <li>
-                Containerisation and Orchestration: Proficient in Docker and Kubernetes, with years of experience using
+                <b>Containerisation and Orchestration</b>: Proficient in Docker and Kubernetes, with years of experience using
                 OpenShift.
               </li>
             </ul>
