--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
               <li> Java Springboot.</li>
               <li> Cloud-native application development and deployment.</li>
               <li> Terraform.</li>
-              <li> Docker and Kubernetes containerization and orchestration.</li>
+              <li> Docker and Kubernetes containerisation and orchestration.</li>
               <li> OpenShift.</li>
               <li> Technical leadership and direction.</li>
               <li> Cross-functional team collaboration.</li>
@@ -169,7 +169,7 @@
             <h5 class="w3-opacity"><b>Software Engineer @ British Telecom (BT)</b></h5>
             <h6 class="w3-text-teal"><i class="fa-regular fa-calendar-days fa-fw w3-margin-right"></i>Sept 2013 - Jul
               2019</h6>
-            <p>Refreshing and dockerizing a legacy system that deals with services deployed all over the world. This
+            <p>Refreshing and dockerising a legacy system that deals with services deployed all over the world. This
               involved writing new services in Python and setting them up as microservices. Setup communication between
               all services using a QPID broker to enable faster and more efficient communications between services. All
               microservices deployed as docker containers and managed with Rancher.</p>
